updated naviagtion pages unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ GatorFinder/Frontend/gatorfinder-frontend/package-lock.json
 GatorFinder/Frontend/gatorfinder-frontend/package.json
 
 .gitignore
+GatorFinder/Frontend/gatorfinder-frontend/package-lock.json
