--- a/GatorFinder/Frontend/gatorfinder-frontend/package.json
+++ b/GatorFinder/Frontend/gatorfinder-frontend/package.json
@@ -12,8 +12,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.1",
+    "nodemailer": "^6.10.1",
+    "otp-generator": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
