--- a/GatorFinder/Frontend/gatorfinder-frontend/package.json
+++ b/GatorFinder/Frontend/gatorfinder-frontend/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@testing-library/cypress": "^10.0.3",
     "babel-jest": "^29.7.0",
     "cypress": "^14.1.0",
     "identity-obj-proxy": "^3.0.0"
